# sync-ai-agent-config

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  justfile  pyproject.toml  sync-ai-config-old.py  sync-ai-config.py
.claude/: settings.local.json
.github/workflows/: test.yml
agents-configs/: create_links.sh
common-doc/: README.md  code-style.md  design-doc-draft.md  design-doc.md
old-doc/: design-doc-draft.md  design-doc.md
plans/: plan-configurable-sync-mappings-20260423.md
spec/: spec-configurable-sync-mappings-20260423.md
src/sync_ai_config/: __init__.py  __main__.py  cli.py  config.py  default_mappings.toml  main.py  mapping_config.py  mappings.py  models.py  task_builder.py  task_executor.py
src/syncer/: di_module.py  dummy.py  main.py
test/: test_dummy.py
tests/: test_cli.py  test_default_mappings.py  test_file_mapping_models.py  test_main.py  test_mapping_config.py  test_mapping_config_loader.py  test_sync_tasks.py
