[project]
name = "sync-ai-agent-config"
version = "0.1.0"
description = "Sync AI agent configuration files between local machine and remote server"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
sync-ai-config = "sync_ai_config.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sync_ai_config"]

[tool.ruff]
indent-width = 2

[tool.ruff.lint]
ignore = ["E111", "E114", "E117"]


[dependency-groups]
dev = [
  "black",
  "pyinstaller",
  "pytest",
  "ruff",
  "ty",
]
